--- a/Credit_score_Shama.ipynb
+++ b/Credit_score_Shama.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZfNGTeNBMfCL8piWO5n/L"
+      "authorship_tag": "ABX9TyML89SgsG3u1w+SII9JHzHV"
     },
     "kernelspec": {
       "name": "python3",
@@ -27,11 +27,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![](https://github.com/shamabansal17/Credit_Score_Calculation/raw/main/credit_score.gif)\n",
-        "\n"
+        "# ![Credit Score Calculation](https://raw.githubusercontent.com/shamabansal17/Credit_Score_Calculation/main/credit_score.gif)\n"
       ],
       "metadata": {
-        "id": "UyQRMWH5o8ta"
+        "id": "du5-hgExF5tL"
       }
     },
     {
