--- a/Credit_score_Shama.ipynb
+++ b/Credit_score_Shama.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyML89SgsG3u1w+SII9JHzHV"
+      "authorship_tag": "ABX9TyNyH77fJe802v4O1REG9qm9"
     },
     "kernelspec": {
       "name": "python3",
@@ -27,7 +27,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ![Credit Score Calculation](https://raw.githubusercontent.com/shamabansal17/Credit_Score_Calculation/main/credit_score.gif)\n"
+        "<!-- # ![Credit Score Calculation](https://raw.githubusercontent.com/shamabansal17/Credit_Score_Calculation/main/credit_score.gif) -->\n",
+        "# <img src=\"https://raw.githubusercontent.com/shamabansal17/Credit_Score_Calculation/main/credit_score.gif\" alt=\"Credit Score Calculation\" style=\"width:600px;\"/>\n",
+        "\n"
       ],
       "metadata": {
         "id": "du5-hgExF5tL"
