--- a/Credit_score_Shama.ipynb
+++ b/Credit_score_Shama.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyH77fJe802v4O1REG9qm9"
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM9+bqwgKtZSEVzFEVIf/E9"
     },
     "kernelspec": {
       "name": "python3",
@@ -8562,10 +8563,10 @@
         "- Full Payments: Paying off the full balance each month is ideal, especially for credit cards, as it avoids interest charges and demonstrates strong financial management.<br>\n",
         "\n",
         "**Behaviour towards spending and paying installments**\n",
-        "- High_spent_Medium_value_payments: High-value purchases with small payments toward the balance.\n",
+        "- High_spent_Medium_value_payments: High-value purchases with medium payments toward the balance.\n",
         "Impact:\n",
-        "If the credit utilization remains high due to high spending and only small payments are made, it can negatively impact your credit score. High balances relative to credit limits can lower your score.\n",
-        "- Low_Spent_Medium_Value_Payments: Making low-value purchases and paying small amounts towards the balance.\n",
+        "If the credit utilization remains high due to high spending and only medium payments are made, it can negatively impact your credit score. High balances relative to credit limits can lower your score.\n",
+        "- Low_Spent_Medium_Value_Payments: Making low-value purchases and paying medium amounts towards the balance.\n",
         "Impact:\n",
         "If payments are timely and balances remain low, this behavior is likely to have a neutral or slightly positive impact on your credit score but If small payments lead to balances being carried over and high credit utilization, it may negatively impact the score. Additionally, making only minimum payments might lead to higher interest charges and slower debt reduction.\n",
         "- High_Spent_Large_Value_Payments: Making high-value purchases and paying large amounts towards the balance.\n",
@@ -8574,10 +8575,10 @@
         "- Low_Spent_Large_Value_Payments: Making low-value purchases but paying large amounts towards the balance.\n",
         "Impact:\n",
         "This behavior is generally positive for credit scores if it keeps the balance low and payments are timely, reflecting good credit management.\n",
-        "- High_Spent_Small_Payments: Making high-value purchases and only making minimum payments.\n",
+        "- High_Spent_Small_value_Payments: Making high-value purchases and only making minimum payments.\n",
         "Impact:\n",
         "This behavior can significantly impact your credit score negatively due to high credit utilization and potential accumulation of debt. Consistently making only minimum payments can lead to higher interest charges and increased debt over time.\n",
-        "- Low_Spent_Small_Payments: Making low-value purchases and only making minimum payments.\n",
+        "- Low_Spent_Small_value_Payments: Making low-value purchases and only making minimum payments.\n",
         "Impact:\n",
         "If credit utilization is low and payments are timely, this behavior may have a neutral to positive impact on the credit score. But regularly making only minimum payments might slow debt reduction and could eventually lead to higher overall interest costs, impacting the credit score negatively if balances are carried over."
       ],
@@ -8592,10 +8593,11 @@
         "pymnt_dict={'High_spent_Small_value_payments':1,\n",
         "            'Low_spent_Small_value_payments':2,\n",
         "            \"High_spent_Medium_value_payments\":3,\n",
-        "            \"High_spent_Large_value_payments\":4,\n",
-        "            \"Low_spent_Medium_value_payments\":5,\n",
+        "            \"Low_spent_Medium_value_payments\":4,\n",
+        "            \"High_spent_Large_value_payments\":5,\n",
         "            \"Low_spent_Large_value_payments\":6,\n",
         "            'Unknown':1}\n",
+        "\n",
         "df['Payment_Behaviour']=df['Payment_Behaviour'].replace(pymnt_dict)\n",
         "df['Payment_Behaviour'].value_counts()"
       ],
@@ -8682,6 +8684,17 @@
           "execution_count": 119
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# check below for insights due to changes"
+      ],
+      "metadata": {
+        "id": "8KS0j8QMs1Tq"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
